fixed srcs paths

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- Start nav bar -->
   <nav class="bg-darkPrimary flex justify-between px-[100px] sticky top-0 h-[50px]">
     <!-- image -->
-    <img src="../assets/logo.svg" alt="Assem Portfolio's Logo" class="h-[40px] self-center" />
+    <img src="./assets/logo.svg" alt="Assem Portfolio's Logo" class="h-[40px] self-center" />
     <!-- navigators -->
     <i class="fa-solid fa-bars text-biege self-center lg:hidden"></i>
     <ul class="p-5 text-biege items-center gap-10 absolute hidden flex flex-col lg:flex lg:flex-row lg:static top-[50px] right-0 bg-darkPrimary">
@@ -92,14 +92,14 @@
       </div>
       <!-- image side-->
       <figure>
-        <img src="../assets/avatar.svg" alt="Avatar picture" class="w-[296px] lg:w-[511px]">
+        <img src="./assets/avatar.svg" alt="Avatar picture" class="w-[296px] lg:w-[511px]">
       </figure>
     </header>
     <!-- End header -->
     <!-- start About me section -->
     <section id="about" class="flex flex-col items-center lg:flex-row bg-lblue rounded-3xl gap-10 p-10 mx-auto">
       <figure>
-        <img src="../assets/avatar.svg" alt="Avatar" class="w-[296px] lg:w-[1500px]">
+        <img src="./assets/avatar.svg" alt="Avatar" class="w-[296px] lg:w-[1500px]">
       </figure>
       <div>
         <h2 class="text-[48px] font-bold text-center lg:text-left">About Me!</h2>
